# aws-mcp

./: .gitignore  AGENTS.md  README.md  claude_desktop_config.example.json  main.py  pyproject.toml  setup.sh
.githooks/: pre-push
aws_mcp/: __init__.py  aws_client.py  config.py  logging_config.py  readonly_guard.py  sensitive_guard.py  server.py  telemetry.py
aws_mcp/tools/: __init__.py  acm.py  apigateway.py  athena.py  autoscaling.py  backup.py  cloudformation.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codebuild.py  codedeploy.py  codepipeline.py  cognito.py  cost_explorer.py  documentdb.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  elbv2.py  emr.py  eventbridge.py  firehose.py  general.py  glue.py  guardduty.py  iam.py  kinesis.py  kms.py  lakeformation.py  lambda_tool.py  memorydb.py  mwaa.py  opensearch.py  organizations.py  profiles.py  (+15 more)
scripts/: security_scan.sh
